# hotelsnearme

./: .gitignore  Postman Collection .json  README.md  docker-compose.yml  heroku.yml
Backend_Django/: .env  Dockerfile  heroku.yml  initiator.sh  manage.py  pyproject.toml
Backend_Django/hotels/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
Backend_Django/hotels/helpers/: exceptions.py  mesure_duration.py  renderers.py
Backend_Django/hotels/migrations/: 0001_initial.py  0002_auto_20201018_1510.py  0003_auto_20201019_1743.py  0004_auto_20201025_1151.py  0005_auto_20201025_1225.py  0006_auto_20201025_1235.py
Backend_Django/hotels/tests/: sample_payloads.py  tests.py
Backend_Django/hotelsnearme/: asgi.py  settings.py  urls.py  wsgi.py
Frontend_vuejs/: .env  Dockerfile  nginx.conf  nginx.conf.template  package-lock.json  package.json
Frontend_vuejs/public/: index.html
Frontend_vuejs/src/: App.vue
Frontend_vuejs/src/components/: HereMap.vue  bookingform.vue
